# brand

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  requirements.in  requirements.txt
.github/workflows/: ci.yml
brandbook/: BUILD.bazel  main.tex
diagrams/: BUILD.bazel
doc/: BUILD.bazel  beamerthemefastverk.sty  defs.bzl  fastverk-onepager.cls  fastverk.cls
fonts/: BUILD.bazel  README.md
iconcomposer/: BUILD.bazel
icons/: BUILD.bazel
mdbook/: BUILD.bazel
mdbook/theme/: head.hbs
mdbook/theme/css/: custom.css  variables.css
mdbook/theme/fonts/: fonts.css
office/: BUILD.bazel  docx.json  pptx.json
onepager/: BUILD.bazel  onepager.tex
skins/: BUILD.bazel  fastverk.textpb  textpb_to_json.py
slides/: BUILD.bazel  deck.tex
wordmark/: BUILD.bazel  wordmark.json
