# brand — the fastverk visual identity: the canonical parametric mark
# generator (shapely CSG -> svgwrite layers), per-platform icon assets
# derived from it, and a LaTeX brandbook PDF (rules_tectonic).
#
# Hermetic: the generator runs in-build as a py_binary (rules_python + a
# pip lock pulling shapely/svgwrite wheels), so `bazel build //...`
# regenerates every SVG, raster, icon, and the brandbook from one source.
module(
    name = "brand",
    version = "0.3.1",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_tectonic", version = "0.2.0")

# meridian — the proto-driven UI framework. Brand depends on it ONLY for the
# theme SCHEMA (@meridian//proto:theme.proto): //skins compiles the fastverk
# Theme textproto against it (protoc --encode) into fastverk.binpb/json. Brand
# pulls no renderer code; meridian stays brand-neutral and the brand skin lives
# here. protobuf provides protoc for the encode step.
#
# Requires meridian >= 0.2.3 (the release that exports theme.proto). For local
# iteration before that publishes, uncomment the override below.
bazel_dep(name = "meridian", version = "0.2.3")
bazel_dep(name = "protobuf", version = "33.4")

# local_path_override(
#     module_name = "meridian",
#     path = "/Volumes/Workspace/fastverk/repos/meridian",
# )

# ─── tectonic (the brandbook PDF) ───────────────────────────────────
tectonic = use_extension("@rules_tectonic//tectonic:extensions.bzl", "tectonic")
use_repo(tectonic, "tectonic")

register_toolchains("@tectonic//:tectonic_toolchain_def")

# ─── hermetic Python (the mark generator) ───────────────────────────
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "brand_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "brand_pip")
