# brand — the fastverk visual identity: fastverk CONTENT (the parametric mark
# geometry, palette, fonts, wordmark text, skin textproto, doc copy) consuming
# the reusable brand pipeline from @brando. brando holds the machinery; this repo
# holds only what is fastverk.
#
# Hermetic: the mark generator runs in-build as a py_binary (rules_python + a pip
# lock pulling shapely/svgwrite/pillow wheels) importing @brando//marklib, so
# `bazel build //...` regenerates every SVG, raster, icon, and the brandbook from
# one source.
module(
    name = "brand",
    version = "0.3.1",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_tectonic", version = "0.2.0")

# brando — the reusable brand pipeline (marklib, brand_doc/brand_skin/brand_icons/
# brand_wordmark/brand_office/brand_mdbook_theme + the templated LaTeX class).
# Resolved from the fastverk registry (mattmarshall/brando).
bazel_dep(name = "brando", version = "0.0.1")

# meridian — brand depends on it ONLY for the theme SCHEMA
# (@meridian//proto:theme.proto): //skins compiles fastverk.textpb against it via
# brando's brand_skin (protoc --encode). protobuf provides protoc for the encode.
bazel_dep(name = "meridian", version = "0.2.3")
bazel_dep(name = "protobuf", version = "33.4")

# ─── tectonic (the brandbook PDF) ───────────────────────────────────
tectonic = use_extension("@rules_tectonic//tectonic:extensions.bzl", "tectonic")
use_repo(tectonic, "tectonic")

register_toolchains("@tectonic//:tectonic_toolchain_def")

# ─── hermetic Python (the mark generator) ───────────────────────────
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "brand_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "brand_pip")
