load("//doc:defs.bzl", "brand_doc")

package(default_visibility = ["//visibility:public"])

# The brand guidelines PDF. The fastverk class + fonts are auto-bundled by
# brand_doc; only the figures need listing. Figures resolve at their
# workspace-relative paths (icons/, wordmark/).
brand_doc(
    name = "brandbook",
    srcs = [
        "//icons:fastverk_full_1024.png",
        "//icons:fastverk_lower_1024.png",
        "//icons:fastverk_lower_128.png",
        "//icons:fastverk_lower_16.png",
        "//icons:fastverk_lower_32.png",
        "//icons:fastverk_lower_64.png",
        "//wordmark:lockup_light.png",
    ],
    main = "main.tex",
)
