load("@brando//:defs.bzl", "brand_doc")

package(default_visibility = ["//visibility:public"])

# The brand guidelines PDF. The fastverk class + fonts are auto-bundled via the
# //doc:resources bundle; only the figures need listing. Figures resolve at their
# workspace-relative paths (icons/, wordmark/, diagrams/).
brand_doc(
    name = "brandbook",
    srcs = [
        "//diagrams:clearspace.png",
        "//diagrams:construction.png",
        "//diagrams:grid.png",
        "//icons:fastverk_full_1024.png",
        "//icons:fastverk_full_512.png",
        "//icons:fastverk_light_full_512.png",
        "//icons:fastverk_light_lower_512.png",
        "//icons:fastverk_lower_1024.png",
        "//icons:fastverk_lower_128.png",
        "//icons:fastverk_lower_16.png",
        "//icons:fastverk_lower_32.png",
        "//icons:fastverk_lower_512.png",
        "//icons:fastverk_lower_64.png",
        "//wordmark:lockup_tag_light.png",
    ],
    main = "main.tex",
    resources = "//doc:resources",
)
