"""fastverk skin for meridian — the brand identity as a meridian.theme.v1.Theme.

`skins/fastverk.textpb` authors the fastverk look ONCE as a Theme textproto
(validated against meridian's schema). brando's brand_skin compiles it to the two
wire forms every meridian renderer consumes:

  * `//skins:fastverk_binpb` -> fastverk.binpb : canonical binary Theme (native
    decoders: TUI Palette::from_theme, Swift, JavaFX), or a plugin resource.
  * `//skins:fastverk_json`  -> fastverk.json  : proto3-JSON twin for the web
    binding — `import fastverk from ".../fastverk.json"; applyTheme(fastverk)`.

meridian stays brand-neutral; the brand (this textproto) lives here. The schema
contract is `@meridian//proto:theme.proto`; the pipeline is @brando//skins.
"""

load("@brando//:defs.bzl", "brand_skin")

package(default_visibility = ["//visibility:public"])

brand_skin(
    name = "fastverk",
    textpb = "fastverk.textpb",
)
